// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphqlGun can do the basics 1`] = `
Object {
  "foo": Object {
    "bar": "baz",
  },
}
`;

exports[`graphqlGun lets you grab the chain at any point 1`] = `
Object {
  "foo": Object {
    "bar": Object {
      "_chain": undefined,
      "hello": undefined,
    },
  },
}
`;
